sampleapp/gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nginx-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP  
  #- port:
  #    number: 443
  #    name: https
  #    protocol: HTTPS
  #  tls:
  #    mode: SIMPLE
  #    serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
  #    privateKey: /etc/istio/ingressgateway-certs/tls.key
    hosts:
    - "*"
